--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -7,7 +7,7 @@
                     <p-button (onClick)="onClickCancel()" icon="pi pi-arrow-left" pTooltip="Back" tooltipPosition="bottom" size="small" text />
                     <p class="text-sm md:text-xl font-semibold">{{ isEditMode() ? 'Edit Playlist' : 'New Playlist' }}</p>
                     @if (isEditMode()) {
-                        <p-tag [value]="formControl('status').value" [icon]="'pi ' + utils.getIcon(formControl('status').value)"
+                        <p-tag [value]="formControl('status').value?.toUpperCase()" [icon]="'pi ' + utils.getIcon(formControl('status').value)"
                             [severity]="utils.getStatus(formControl('status').value)" />
                     }
                 </div>
