--- a/vcastplay-cms/src/app/pages/schedules/schedule-list/schedule-list.component.html
+++ b/vcastplay-cms/src/app/pages/schedules/schedule-list/schedule-list.component.html
@@ -5,7 +5,7 @@
             <div class="flex gap-4 items-center mb-2">
                 <app-schedule-filter class="w-full md:w-[25rem]" (filterChange)="onFilterChange($event)" />
                 <div class="flex gap-4 ml-auto">
-                    <p-button class="hidden md:block" (onClick)="onClickAddNew()" label="Add Schedule" icon="pi pi-plus"></p-button>
+                    <p-button class="hidden md:block" (onClick)="onClickAddNew()" label="New" icon="pi pi-plus"></p-button>
                     <p-button class="md:hidden" (onClick)="onClickAddNew()" label="" icon="pi pi-plus" />
                 </div>
             </div>
@@ -23,7 +23,6 @@
                 size="small"
                 (onPage)="scheduleServices.onPageChange($event)"
                 stripedRows
-                paginator
             >
                 <ng-template #header>
                     <tr>
@@ -40,7 +39,7 @@
                     <tr class="text-sm">
                         <td>{{ item.name }}</td>
                         <td>{{ item.description }}</td>
-                        <td><p class="text-sm">{{ item.updatedOn | date: 'medium' }}</p></td>
+                        <td><p class="text-sm">{{ utils.onGetLastUpdatedLabel(item.updatedOn) }}</p></td>
                         <td><p-tag [value]="item.status.toUpperCase()" [icon]="'pi ' + utils.getIcon(item.status)"
                             [severity]="utils.getStatus(item.status)" /></td>
                         <td>
@@ -75,14 +74,17 @@
                 }
             </div>
         </div>
+        <ng-template #footer>
+            <p-paginator [first]="first()" [rows]="rows()" [totalRecords]="totalRecords()"></p-paginator>
+        </ng-template>
     </p-card>
 </div>
 
 <ng-template #actionBtn let-item>
     <p-button (onClick)="onClickEdit(item)" icon="pi pi-pencil" pTooltip="Edit" tooltipPosition="bottom" severity="success" size="small" />
     <p-button icon="pi pi-check-circle" (onClick)="onClickShowApproved($event, item, approved)" pTooltip="Approval" tooltipPosition="bottom"  severity="info" size="small" />
-    <p-button icon="pi pi-desktop" pTooltip="Set to screen" tooltipPosition="bottom" severity="warn" size="small" [disabled]="item.status == 'Pending'" />
-    <p-button icon="pi pi-history" pTooltip="Playlist Usage" tooltipPosition="bottom" severity="danger" size="small" [disabled]="item.status == 'Pending'" />
+    <p-button icon="pi pi-desktop" pTooltip="Set to screen" tooltipPosition="bottom" severity="warn" size="small" [disabled]="item.status == 'pending'" />
+    <p-button icon="pi pi-history" pTooltip="Playlist Usage" tooltipPosition="bottom" severity="danger" size="small" [disabled]="item.status == 'pending'" />
     <p-button (onClick)="onClickOpenOptions($event, item, actionMenu)" pTooltip="More" tooltipPosition="bottom" icon="pi pi-cog" severity="contrast" size="small" />
 </ng-template>
 
