--- a/vcastplay-cms/src/app/pages/screens/screen-list-item/screen-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/screens/screen-list-item/screen-list-item.component.html
@@ -1,12 +1,11 @@
 <p-card>
     <ng-template #title>
         <div class="flex gap-2">
-            <div class="flex items-center gap-2 md:gap-4">
-                <div class="flex items-center gap-4 bg-[var(--p-primary-500)] 
-                    text-white rounded-full p-3" [pTooltip]="screen.type.toUpperCase()" tooltipPosition="bottom">
+            <div class="flex items-center gap-4">
+                <div class="flex items-center gap-4" [pTooltip]="utils.toTitleCase(screen.type)" tooltipPosition="bottom">
                     @switch (screen.type) {
-                        @case('desktop') { <i class="pi pi-desktop"></i> }
-                        @case('android') { <i class="pi pi-mobile"></i> }
+                        @case('desktop') { <i class="pi pi-desktop !font-black !text-3xl !text-blue-500"></i> }
+                        @case('android') { <i class="pi pi-android !text-3xl !text-lime-500"></i> }
                         @default { <i class="pi pi-globe"></i> }
                     }
                 </div>
@@ -50,7 +49,7 @@
             <p class="font-semibold">Last Update:</p>
             <div class="flex gap-2 items-center ml-auto">
                 <i class="pi pi-clock" [style]="{ 'font-size': '0.75rem'}"></i>
-                <p class="text-sm italic">{{ screen.updatedOn | date: 'mediumDate' }}</p>
+                <p class="text-sm italic">{{ utils.onGetLastUpdatedLabel(screen.updatedOn) }}</p>
             </div>
         </div>
         <div class="flex gap-2 items-center">
