player: set to primary color during playing

--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -1,5 +1,4 @@
-<div class="relative flex flex-col gap-4 justify-center items-center h-screen relative group overflow-hidden" 
-  [formGroup]="authForm" [ngClass]="{ 'bg-[var(--p-primary-500)]': !isPlaying(), 'bg-zinc-900': isPlaying() }">
+<div class="relative flex flex-col gap-4 justify-center items-center h-screen relative group overflow-hidden bg-[var(--p-primary-500)]" [formGroup]="authForm">
 
   <ng-container *ngIf="currentContent()">
     <app-content-container class="absolute h-full w-full flex items-center justify-center" (mousemove)="onMouseMove()" [ngClass]="{ 'cursor-none': hideCursor() }"
