--- a/vcastplay-cms/src/app/pages/screen-management/screen-management-list/screen-management-list.component.html
+++ b/vcastplay-cms/src/app/pages/screen-management/screen-management-list/screen-management-list.component.html
@@ -11,7 +11,8 @@
                 <p-table
                     class="hidden lg:block" 
                     [value]="screenService.loadingSignal() ? utils.tableSkeletonRows : filteredScreen()" 
-                    selectionMode="single"
+                    selectionMode="multiple"
+                    [(selection)]="selectMultipleScreens"
                     [scrollable]="true" 
                     size="small"
                     dataKey="id"
@@ -84,9 +85,58 @@
                         </tr>
                     </ng-template>
                 </p-table>
+                <div class="block lg:hidden flex flex-col gap-4">
+                    <div class="flex items-center gap-2">
+                        <p-checkbox inputId="all" [ngModel]="isAllChecked()" (onChange)="onClickCheckAll($event.checked)" binary />
+                        <label for="all">Select All</label>
+                    </div>
+                    @if (!screenService.loadingSignal()) {
+                        @for (item of filteredScreen(); track $index) {
+                            <app-screen-management-list-item [screen]="item" [actionBtn]="actionBtn" />
+                        } @empty {
+                            <div class="flex justify-center items-center p-5 h-100">
+                                <p>No playlists found</p>
+                            </div>
+                        }
+                    } @else {
+                        @for (item of utils.tableSkeletonRows; track $index) {
+                            <p-skeleton height="5rem" />
+                        }
+                    }
+                </div>
             </div>
             <ng-template #footer>
-                Legends 
+                <p-fieldset>
+                    <ng-template #header>
+                        <p class="text-sm font-semibold">Legends:</p>
+                    </ng-template>
+                    <div class="flex flex-col md:flex-row items-center justify-between gap-3 md:gap-6">
+                        <div class="flex gap-4 items-center">
+                            <div class="flex gap-1 items-center md:justify-center">
+                                <p class="text-sm font-semibold">Playing:</p>
+                                <p-badge severity="success" value="12" />
+                            </div>
+                            <div class="flex gap-1 items-center md:justify-center">
+                                <p class="text-sm font-semibold">Disconnected:</p>
+                                <p-badge severity="danger" value="8" />
+                            </div>
+                            <div class="flex gap-1 items-center md:justify-center">
+                                <p class="text-sm font-semibold">StandBy:</p>
+                                <p-badge severity="warn" value="10" />
+                            </div>
+                        </div>
+                        <div class="md:ml-auto flex gap-6 items-center">
+                            <div class="flex gap-1 items-start md:justify-center">
+                                <p class="text-sm font-semibold">Approved:</p>
+                                <p-badge severity="success" value="22" />
+                            </div>
+                            <div class="flex gap-1 items-start md:justify-center">
+                                <p class="text-sm font-semibold">Disapproved:</p>
+                                <p-badge severity="danger" value="5" />
+                            </div>
+                        </div>
+                    </div> 
+                </p-fieldset>
             </ng-template>
         </p-card>
     </div>
@@ -103,8 +153,7 @@
     <app-screen-controls />
 </div>
 
-
 <ng-template #actionBtn let-item>
-    <!-- <p-button (onClick)="onClickEdit(item)" pTooltip="Edit" tooltipPosition="bottom" icon="pi pi-pencil" severity="success" size="small"/>
-    <p-button (onClick)="onClickDelete(item, $event)" pTooltip="Delete" tooltipPosition="bottom" icon="pi pi-trash" severity="danger" size="small" /> -->
+    <p-button pTooltip="Screenshot" tooltipPosition="bottom" icon="pi pi-camera" severity="success" size="small" />
+    <p-button pTooltip="Screen Information" tooltipPosition="bottom" icon="pi pi-info-circle" severity="contrast" size="small" />
 </ng-template>
