--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -1,4 +1,4 @@
-<div class="relative flex flex-col gap-4 justify-center items-center h-screen relative group overflow-hidden bg-[var(--p-primary-500)]" [formGroup]="authForm">
+<div class="relative flex flex-col gap-4 justify-center items-center h-screen relative group overflow-hidden bg-[var(--p-primary-500)]">
 
   <ng-container *ngIf="currentContent()">
     <app-content-container class="absolute h-full w-full flex items-center justify-center" (mousemove)="onMouseMove()" [ngClass]="{ 'cursor-none': hideCursor() }"
@@ -14,13 +14,19 @@
   </div> -->
 
   <ng-container *ngIf="!currentContent() && !isPlaying()">
-    <div class="absolute h-full w-full flex items-center justify-center">
-      <img class="w-[15rem] md:w-[30rem]" src="assets/vcastplay.png" alt="vcastplay 2.0 logo">
+    <div class="absolute top-0 start-0 flex items-center justify-center p-6">
+      <img class="w-30" src="assets/vcastplay.png" alt="vcastplay 2.0 logo">
+    </div>
+
+    <div class="absolute h-full w-full flex flex-col gap-4 items-center justify-center">
+      <p class="text-5xl md:text-8xl font-bold text-white tracking-[1.25rem] md:tracking-[1.75rem]">{{ systemInfo()?.playerCode }}</p>
+      <p class="text-lg font-light text-white">Player Code</p>
     </div>
   </ng-container>
+  
 
   <div class="absolute bottom-3 right-3 flex items-center gap-1 m-2">
-    <p class="text-sm text-zinc-300">{{ systemInfo()?.code ?? '000000000' }}: {{ systemInfo()?.appVersion ?? '0.0.0' }}</p>
+    <p class="text-[10px] md:text-sm text-zinc-300">{{ systemInfo()?.code ?? '000000000' }}: {{ systemInfo()?.appVersion ?? '0.0.0' }}</p>
   </div>
 
   <!-- @if (isDev()) {
